--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="CardDrawApp">
   <head>
     <meta charset="utf-8">
     <title>Untitled</title>
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body ng-cloak>
-    <!-- sample angular code -->
     <div class="container">
-      <div ng-controller="mainController as mainCtrl">
-        <p>{{ mainCtrl.greeting }}</p>
+      <div class="row">
+        <div class="col s6">
+          <cd-hand></cd-hand>
+        </div>
+
+        <div class="col s6">
+          <deck></deck>
+        </div>
       </div>
     </div>
 
@@ -23,8 +28,9 @@
     <!-- load application -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
-
-    <!-- main component -->
-    <script type="text/javascript" src="js/components/main/main.controller.js"></script>
+    <script type="text/javascript" src="js/components/hand/hand.config.js"></script>
+    <script type="text/javascript" src="js/components/hand/hand.directive.js"></script>
+    <script type="text/javascript" src="js/components/hand/hand.service.js"></script>
+    <script type="text/javascript" src="js/components/hand/hand.controller.js"></script>
   </body>
 </html>
